--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@font-face {
+  font-family: "CircularStd";
+  src: url("fonts/CircularStd-Medium.ttf"),
+}
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-*{
+* {
   list-style: none;
   text-decoration: none;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-body{
-  overflow-x: hidden;
+  font-family: "CircularStd", sans-serif;
 }
 html {
   scroll-behavior: smooth;
 }
-
-
-
