--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,52 @@
 @font-face {
   font-family: "CircularStd";
-  src: url("fonts/CircularStd-Bold.ttf");
-  font-weight: bold; /* or 700 if you prefer numeric values */
+  src: url("fonts/CircularStd-Black.eot");
+  font-weight: 900;
+  font-style: normal;
+}
+@font-face {
+  font-family: "CircularStd";
+  src: url("fonts/CircularStd-BlackItalic.eot");
+  font-weight: 900;
+  font-style: italic;
+}
+@font-face {
+  font-family: "CircularStd";
+  src: url("fonts/CircularStd-Bold.eot");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "CircularStd";
+  src: url("fonts/CircularStd-BoldItalic.eot");
+  font-weight: 700;
+  font-style: italic;
+}
+@font-face {
+  font-family: "CircularStd";
+  src: url("fonts/CircularStd-Book.eot");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "CircularStd";
+  src: url("fonts/CircularStd-BookItalic.eot");
+  font-weight: 400;
+  font-style: italic;
+}
+@font-face {
+  font-family: "CircularStd";
+  src: url("fonts/CircularStd-Medium.eot");
+  font-weight: 500;
+  font-style: normal;
 }
 
 @font-face {
   font-family: "CircularStd";
-  src: url("fonts/CircularStd-Regular.ttf");
-  font-weight: normal; /* or 400 if you prefer numeric values */
+  src: url("fonts/CircularStd-MediumItalic.eot");
+  font-weight: 500;
+  font-style: italic;
 }
-
-@font-face {
-  font-family: "CircularStd";
-  src: url("fonts/CircularStd-Light.ttf");
-  font-weight: lighter; /* or 300 if you prefer numeric values */
-}
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -26,10 +57,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "CircularStd", sans-serif;
+  /* font-family: "CircularStd"; */
 }
-body{
-  font-family: "CircularStd", sans-serif;
+body {
+  
 }
 
 html {
