--- a/styles.css
+++ b/styles.css
@@ -57,10 +57,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* font-family: "CircularStd"; */
 }
 body {
-  
+  font-family: "CircularStd";
 }
 
 html {
